--- a/_header.html
+++ b/_header.html
@@ -1,15 +1,7 @@
-<!-- Header -->
-<div class="wrap-block m-prefix_1 m-suffix_1 d-visible">
-    <header class="inner" role="banner">
-        <div class="logo h1">
-            <a href="{$website:url}" title="{$page:h1}">
-                {$plugin:widcard:BizOrgName:notag}
-                <img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" width="80"
-                     height="40"/>
-            </a>
-        </div>
-        <span class="slogan">
-            We search.<br/>You travel.
-        </span>
-    </header>
-</div>
+<header class="relative" role="banner">
+    <h1 class="logo">
+        <a href="{$website:url}" title="{$page:h1}">
+            <img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" width="165" height="590"/>
+        </a>
+    </h1>
+</header>
