--- a/news.html
+++ b/news.html
@@ -4,38 +4,34 @@
     <!-- Include head template -->
     {$template:_head}
 </head>
-<body class="index">
+<body class="news-page">
 
 <!-- Container -->
-<main id="page" class="container">
+<main id="page" class="container width-1200">
 
     <!-- Header -->
-    <div class="wrap-block grid_2 m-grid_2 m-prefix_1 m-suffix_1 d-visible">
-        <header class="" role="banner">
-            <h1 class="logo">
-                <a href="{$website:url}" title="{$page:h1}">
-                    {$plugin:widcard:BizOrgName:notag}
-                    <img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" width="80" height="40">
-                </a>
-            </h1>
-                    <span class="slogan">
-                        We search.<br />You travel.
-                    </span>
-        </header>
 
-        <div class="some-text">
-            {$content:text:static}
+    <div class="wrap-block grid_2 alpha omega m-grid_2 m-prefix_1 m-suffix_1 d-visible floating-block">
+        <div data-spy="affix" data-offset-top="150" data-offset-bottom="200">
+            {$template:_header}
+            <aside class="box-white-bg opacity-bg news-cloud">
+                <h4 class="text-center">{$header:tag-cloud:static}</h4>
+                {$news:tagcloud}
+            </aside>
+            <div class="some-text">
+                {$content:text:static}
+            </div>
         </div>
     </div>
 
-    <div class="grid_8 main">
+    <div class="grid_8 alpha omega main">
         <p class="top-text">{$header:toptext:static}</p>
         <!-- Main Menu -->
         <nav id="main-menu" class="d-visible" role="navigation">
             {$menu:main:_main menu}
         </nav>
         <div class="news-page-teaser mb20px">
-            {$page:preview:crop:776x200}
+            {$directupload:news-image-{$news:id}:news-images:700::crop:nolink}
         </div>
         <div class="content box-white-bg opacity-bg">
             <!-- news content -->
@@ -47,36 +43,37 @@
             {$content:content_key1}
             {/newscontent}
         </div>
+        {$template:_footer}
     </div>
-    <aside class="grid_2 ">
+    <aside class="grid_2 alpha omega mt136 right-ad" role="complementary">
         <div class="box-grey-bg opacity-bg wrap thin">
-            <div class="social-block">{$template:_social links}</div>
+            <div class="social-block text-center">{$template:_social links}</div>
         </div>
-        <ul class="offer-list mb20px">
-                    <li>
-                        <span>{$header:img1:static}</span>
-                        {$imageonly:img1:152:static}
-                        <p>{$header:img11:static}</p>
-                    </li>
-                    <li>
-                        <span>{$header:img2:static}</span>
-                        {$imageonly:img2:152:static}
-                        <p>{$header:img21:static}</p>
-                    </li>
-                    <li>
-                        <span>{$header:img3:static}</span>
-                        {$imageonly:img3:152:static}
-                        <p>{$header:img31:static}</p>
-                    </li>
-                </ul>
+        <ul class="news-list">
+            {newslist:news-list-right}
+            <li class="news-item">
+                {$news:actions}
+                <a class="news-item-title text-left mb10px" href="{$news:url}">{$news:title}</a>
+                <a class="news-item-image" href="{$news:url}">
+                    {$imageonly:news-{$news:id}:152:static:readonly}
+                </a>
+                {adminonly}
+                <div class="admin-hide-image">
+                    {$imageonly:news-{$news:id}:152:static}
+                </div>
+                {/adminonly}
+                <p class="news-item-description">{$news:teaser:150}</p>
+            </li>
+            {/newslist}
+        </ul>
     </aside>
 </main>
+
 
 <!-- Footer -->
 <!-- Include Footer template -->
 <!--{$ template:_footer}-->
-<!-- Include Footer template -->
-                {$template:_footer}
+
 <!-- Include mobile elements template -->
 {$template:_mobile elements}
 
