social iconss were corrected

--- a/_header.html
+++ b/_header.html
@@ -1,4 +1,4 @@
-<header class="relative" role="banner">
+<header class="relative mb20px" role="banner">
     <h1 class="logo">
         <a href="{$website:url}" title="{$page:h1}">
             <img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" width="165" height="590"/>
