--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
 <body class="index">
 
 <!-- Container -->
-<main id="page" class="container width-1200">
+<main id="page" class="container">
 
-    <!-- Header -->
-
-    <div class="wrap-block grid_2 alpha omega m-grid_2 m-prefix_1 m-suffix_1 d-visible floating-block">
+    <div class="wrap-block grid_2 alpha omega floating-block left-side">
         <div data-spy="affix" data-offset-top="150" data-offset-bottom="200">
             {$template:_header}
-            <aside class="box-white-bg opacity-bg news-cloud">
+            <aside>
+                <a class="btn sb1" href="http://blog.mobissimo.it">Cerca nel blog</a>
+            </aside>
+            <aside class="box-white-bg thin opacity-bg news-cloud">
                 <h4 class="text-center">{$header:tag-cloud:static}</h4>
                 {$news:tagcloud}
+            </aside>
+            <aside>
+                <a class="btn sb2" href="http://blog.mobissimo.it"><span>Invia il tuo <br /> articolo</span></a>
             </aside>
             <div class="some-text">
                 {$content:text:static}
@@ -29,36 +33,26 @@
         <!-- Main Menu -->
         <nav id="main-menu" class="d-visible" role="navigation">
             {$menu:main:_main menu}
-
         </nav>
         <div class="content box-white-bg opacity-bg">
             {$content:mobissimoform}
         </div>
         <!-- Content box -->
-        <div class="box-white-bg opacity-bg wrap ">
-            <ul class="news-list">
-                {newslist:NEWS-LIST_NAME}
-                <li class="news-item">
-                    {$news:actions}
-                    <a class="news-item-title mb10px" href="{$news:url}">{$news:title}</a>
-                    <a class="news-item-image text-center" href="{$news:url}">
-                        <img src="{$news:preview}" alt="{$news:title:inline}"/>
-                    </a>
-                    <p class="news-item-description">{$news:teaser:150}</p>
-                </li>
-                {/newslist}
+        <div class="box-white-bg opacity-bg wrap">
+            <ul class="news-list main-list" id="main-list">
+                {$newslist:_news list - main:4:desc:::pgr}
             </ul>
         </div>
-        <!-- Footer -->
-        <!-- Include Footer template -->
+        <div id="news-paginator" class="text-center"> </div>
         {$template:_footer}
     </div>
-    <aside class="grid_2 alpha omega mt136 right-ad" role="complementary">
-        <div class="box-grey-bg opacity-bg wrap thin">
+
+    <aside class="grid_2 alpha omega right-side aside-margin" role="complementary">
+        <div class="box-grey-bg opacity-bg wrap thin social-accounts">
             <div class="social-block text-center">{$template:_social links}</div>
         </div>
         <ul class="news-list">
-            {newslist:news-list-right}
+            {newslist:news-list-right:3}
             <li class="news-item">
                 {$news:actions}
                 <a class="news-item-title text-left mb10px" href="{$news:url}">{$news:title}</a>
@@ -70,7 +64,7 @@
                     {$imageonly:news-{$news:id}:152:static}
                 </div>
                 {/adminonly}
-                <p class="news-item-description">{$news:teaser::150}</p>
+                <p class="news-item-description mb0px">{$news:teaser::150}</p>
             </li>
             {/newslist}
         </ul>
@@ -86,5 +80,12 @@
 
 <!-- Include scripts template -->
 {$template:_scripts}
+<script>
+    $(window).load(function() {
+        $('#main-list .news-list-pagination').appendTo($('#news-paginator'));
+        $('<a class="paginations" href="http://blog.mobissimo.it">Home page</a>').prependTo($('#news-paginator .paginator'));
+        $("a:contains('Next')").text("Pagina successiva >");
+    });
+</script>
 </body>
 </html>
