adding form in dialog window

--- a/_footer.html
+++ b/_footer.html
@@ -4,3 +4,7 @@
     <nav>{$menu:flat}</nav>
 </footer>
 {/device}
+
+<div id="add-to-archive" class='dialog' title="">
+    {$form:form-add-to-archive:captcha:custom:Envoyer}
+</div>
