--- a/_header.html
+++ b/_header.html
@@ -1,6 +1,6 @@
 <header class="relative" role="banner">
     <h1 class="logo">
-        <a href="{$website:url}" title="{$page:h1}">
+        <a href="http://www.mobissimo.it/" title="{$page:h1}">
             <img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" width="165" height="590"/>
         </a>
     </h1>
