--- a/email - admin.html
+++ b/email - admin.html
@@ -12,7 +12,7 @@
 	<tr>
 		<td bgcolor="#FAFAFA" align="center" style="padding: 40px 0 40px 0;">
 			<a target="_blank" href="{$website:url}">
-				<img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" height="75" style="vertical-align:middle;">
+				<img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" height="300" style="vertical-align:middle;">
 			</a>
 		</td>
 	</tr>
@@ -50,6 +50,12 @@
 									<b>Message:</b>
 								</td>
 								<td style="padding: 3px 0 3px 0;">{form:message}</td>
+							</tr>
+							<tr>
+								<td valign="top" width="30%" style="padding: 3px 0 3px 0;">
+									<b>Uploaded file:</b>
+								</td>
+								<td style="padding: 3px 0 3px 0;">Check the attached files, user could have attached the file.</td>
 							</tr>
 						</table>
 
