--- a/email - user.html
+++ b/email - user.html
@@ -12,7 +12,7 @@
 	<tr>
 		<td bgcolor="#FAFAFA" align="center" style="padding: 40px 0 40px 0;">
 			<a target="_blank" href="{$website:url}">
-				<img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" height="75" style="vertical-align:middle;">
+				<img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" height="300" style="vertical-align:middle;">
 			</a>
 		</td>
 	</tr>
@@ -33,7 +33,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="center" bgcolor="#6157DA" style="padding: 25px 25px 25px 25px; color: #153643; font-family: Arial, sans-serif; font-size: 12px; line-height: 20px;">
+		<td align="center" bgcolor="#f16f29" style="padding: 25px 25px 25px 25px; color: #153643; font-family: Arial, sans-serif; font-size: 12px; line-height: 20px;">
 			<address>
 				<font color="#FFFFFF">{$plugin:widcard:BizOrgName:notag} | {$plugin:widcard:BizAddress1:notag}, {$plugin:widcard:BizCity:notag}, {$plugin:widcard:BizState:notag} {$plugin:widcard:BizZip:notag} | Tel : <a style="color: #FFFFFF;" href="tel:{$plugin:widcard:BizTelephone:notag}">{$plugin:widcard:BizTelephone:notag}</a></address>
 		</td>
