e-mail templates customization.

--- a/email - user.html
+++ b/email - user.html
@@ -10,9 +10,10 @@
 <body style="margin: 0; padding: 25px 0 25px 0;">
 <table align="center" border="1" bordercolor="#EEEEEE" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse; border: 1px solid #EEEEEE;">
 	<tr>
-		<td bgcolor="#FAFAFA" align="center" style="padding: 40px 0 40px 0;">
-			<a target="_blank" href="{$website:url}">
-				<img src="{$plugin:widcard:bizLogo:url}" alt="{$plugin:widcard:BizOrgName:notag}" height="300" style="vertical-align:middle;">
+		<td bgcolor="#FAFAFA" align="center" style="padding: 40px 0 40px 0; text-decoration: none;">
+			<a style="display: block; color: #7e1710; text-decoration: none; font-size: 40px;" target="_blank" href="{$website:url}">
+				<strong style="display: block; padding-bottom: 20px; text-transform: uppercase;">www.mobissimo.it</strong>
+				<span style="display:block;">#traveltheworld</span><span style="display: block;">con Mobissimo</span>
 			</a>
 		</td>
 	</tr>
@@ -33,9 +34,10 @@
 		</td>
 	</tr>
 	<tr>
-		<td align="center" bgcolor="#f16f29" style="padding: 25px 25px 25px 25px; color: #153643; font-family: Arial, sans-serif; font-size: 12px; line-height: 20px;">
-			<address>
-				<font color="#FFFFFF">{$plugin:widcard:BizOrgName:notag} | {$plugin:widcard:BizAddress1:notag}, {$plugin:widcard:BizCity:notag}, {$plugin:widcard:BizState:notag} {$plugin:widcard:BizZip:notag} | Tel : <a style="color: #FFFFFF;" href="tel:{$plugin:widcard:BizTelephone:notag}">{$plugin:widcard:BizTelephone:notag}</a></address>
+		<td align="center" bgcolor="#f16f29" style="padding: 25px 25px 25px 25px; color: #153643; font-family: Arial, sans-serif; font-size: 13px; line-height: 20px;">
+			<span style="display: block; color: #ffffff;"><a style="color: #FFFFFF; text-decoration: none;" href="mailto:info@mobissimo.com"><strong>Richieste generali:</strong> info@mobissimo.com</a></span>
+			<span style="display: block; color: #ffffff;"><a style="color: #FFFFFF; text-decoration: none;" href="mailto:sales@mobissimo.com"><strong>Commerciale e pubblicita:</strong> sales@mobissimo.com</a></span>
+			<span style="display: block; color: #ffffff;"><a style="color: #FFFFFF; text-decoration: none;" href="mailto:support@mobissimo.com"><strong>Supporto:</strong> support@mobissimo.com</a></span>
 		</td>
 	</tr>
 </table>
